@@ -448,6 +448,7 @@ lobby::lobby(display& disp, const config& cfg, chat& c, config& gamelist) :
 	observe_game_(disp.video(), _("Observe Game")),
 	join_game_(disp.video(), _("Join Game")),
 	create_game_(disp.video(), _("Create Game")),
+	game_preferences_(disp.video(), _("Preferences")),
 	quit_game_(disp.video(), _("Quit")),
 	sorter_(gamelist),
 	games_menu_(disp.video()),
@@ -466,6 +467,7 @@ void lobby::hide_children(bool hide)
 	observe_game_.hide(hide);
 	join_game_.hide(hide);
 	create_game_.hide(hide);
+	game_preferences_.hide(hide);
 	quit_game_.hide(hide);
 }
 
@@ -476,7 +478,8 @@ void lobby::layout_children(const SDL_Rect& rect)
 	join_game_.set_location(xscale(12),yscale(7));
 	observe_game_.set_location(join_game_.location().x + join_game_.location().w + 5,yscale(7));
 	create_game_.set_location(observe_game_.location().x + observe_game_.location().w + 5,yscale(7));
-	quit_game_.set_location(create_game_.location().x + create_game_.location().w + 5,yscale(7));
+	game_preferences_.set_location(create_game_.location().x + create_game_.location().w + 5,yscale(7));
+	quit_game_.set_location(game_preferences_.location().x + game_preferences_.location().w + 5,yscale(7));
 
 	games_menu_.set_location(client_area().x, client_area().y + title().height());
 	games_menu_.set_measurements(client_area().w, client_area().h
@@ -536,6 +539,11 @@ void lobby::process_event()
 		return;
 	}
 
+	if(game_preferences_.pressed()) {
+		set_result(PREFERENCES);
+		return;
+	}
+	
 	if(quit_game_.pressed()) {
 		recorder.set_skip(false);
 		set_result(QUIT);
