@@ -113,6 +113,7 @@ private:
 	gui::button observe_game_;
 	gui::button join_game_;
 	gui::button create_game_;
+	gui::button game_preferences_;
 	gui::button quit_game_;
 
 	lobby_sorter sorter_;
