@@ -61,6 +61,7 @@ SVN trunk (1.1.2+svn):
  * misc
    * fix alt key under MacosX
    * help contents available from title screen
+   * preferences available from multiplayer lobby
 
 Version 1.1.2:
  * campaigns
